# jenkins-job-manager

./: pyproject.toml
jenkins_job_manager/: core.py
