[tool.poetry]
name = "jenkins-job-manager"
version = "0.4.1"
description = ""
authors = ["Jeremy Lavergne <github@lavergne.me>", "Jon Wedaman <jweede@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.2"
jenkins-job-builder = "^3.5.0"
jinja2 = "^2.11"
python-jenkins = "^1.7.0"

[tool.poetry.scripts]
jjm = 'jenkins_job_manager.cli:jjm'

[tool.poetry.dev-dependencies]
tomlkit = "^0.7.0"
pytest = "^6.0.1"

[tool.black]
line-length = 88
target-version = ['py36']

[tool.pytest.ini_options]
addopts = ["-q", "--junitxml=testresults.xml", "-nauto", "--cov", "jenkins_job_manager", "--cov-report", "html", "--cov-report", "term:skip-covered"]
norecursedirs = [".venv"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
